src/core/scriptParse.output
Terminals which are not used

   ScError


Grammar

    0 $accept: input $end

    1 input: program
    2      | /* empty */

    3 program: statement
    4        | statement program

    5 statement: command ScEndOfStatement

    6 command: databaseCmd
    7        | saveCmd
    8        | exhaustiveSearchCmd
    9        | function

   10 function: monomerPackFn
   11         | oligomerFn
   12         | architectFn
   13         | geometryScorerFn

   14 databaseCmd: ScDatabase ScString

   15 saveCmd: ScSave ScName ScString

   16 monomerPackFn: ScMonomerPack ScName optionalNameList ScOpenBrace monomerPackPartList ScCloseBrace

   17 oligomerFn: ScOligomer ScName ScOpenBrace oligomerPartList ScCloseBrace

   18 architectFn: ScArchitect ScName ScOpenBrace architectPartList ScCloseBrace

   19 geometryScorerFn: ScGeometryScorer ScName ScOpenBrace geometryScorerPartList ScCloseBrace

   20 geometryScorerPartList: geometryScorerPart
   21                       | geometryScorerPart geometryScorerPartList

   22 geometryScorerPart: ScDistance ScAlias ScAlias ScDouble ScDouble optString ScEndOfStatement
   23                   | ScDistance ScAlias ScAlias ScDouble optString ScEndOfStatement

   24 oligomerReference: ScOligomer ScName

   25 architectPart: oligomerReference ScEndOfStatement
   26              | oligomerFn ScEndOfStatement

   27 architectPartList: architectPart
   28                  | architectPart architectPartList

   29 exhaustiveSearchCmd: ScExhaustiveSearch ScName ScName ScString ScInteger

   30 monomerPackPartList: monomerPackPart
   31                    | monomerPackPart monomerPackPartList

   32 monomerPackPart: ScName nameList ScEndOfStatement
   33                | ScName ScEndOfStatement

   34 optionalNameList: nameList
   35                 | /* empty */

   36 optString: ScString
   37          | /* empty */

   38 nameList: ScOpenBracket nameListParts ScCloseBracket

   39 nameListParts: ScName nameListParts
   40              | ScName

   41 optionalString: ScString
   42               | /* empty */

   43 oligomerPartList: oligomerPart
   44                 | oligomerPart oligomerPartList

   45 oligomerPart: ScMonomer ScName ScName optionalNameList optionalString ScEndOfStatement
   46             | ScLink ScName ScName ScOpenBrace ScMonomer ScName ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement


Terminals, with rules where they appear

$end (0) 0
error (256)
ScError (258)
ScEndOfStatement (259) 5 22 23 25 26 32 33 45 46
ScDatabase (260) 14
ScSave (261) 15
ScMonomerPack (262) 16
ScOligomer (263) 17 24
ScLink (264) 46
ScMonomer (265) 45 46
ScArchitect (266) 18
ScGeometryScorer (267) 19
ScExhaustiveSearch (268) 29
ScDistance (269) 22 23
ScOpenBrace (270) 16 17 18 19 46
ScCloseBrace (271) 16 17 18 19 46
ScOpenBracket (272) 38
ScCloseBracket (273) 38
ScName (274) 15 16 17 18 19 24 29 32 33 39 40 45 46
ScInteger (275) 29
ScDouble (276) 22 23
ScString (277) 14 15 29 36 41
ScAlias (278) 22 23


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
input (25)
    on left: 1 2, on right: 0
program (26)
    on left: 3 4, on right: 1 4
statement (27)
    on left: 5, on right: 3 4
command (28)
    on left: 6 7 8 9, on right: 5
function (29)
    on left: 10 11 12 13, on right: 9
databaseCmd (30)
    on left: 14, on right: 6
saveCmd (31)
    on left: 15, on right: 7
monomerPackFn (32)
    on left: 16, on right: 10
oligomerFn (33)
    on left: 17, on right: 11 26
architectFn (34)
    on left: 18, on right: 12
geometryScorerFn (35)
    on left: 19, on right: 13
geometryScorerPartList (36)
    on left: 20 21, on right: 19 21
geometryScorerPart (37)
    on left: 22 23, on right: 20 21
oligomerReference (38)
    on left: 24, on right: 25
architectPart (39)
    on left: 25 26, on right: 27 28
architectPartList (40)
    on left: 27 28, on right: 18 28
exhaustiveSearchCmd (41)
    on left: 29, on right: 8
monomerPackPartList (42)
    on left: 30 31, on right: 16 31
monomerPackPart (43)
    on left: 32 33, on right: 30 31
optionalNameList (44)
    on left: 34 35, on right: 16 45 46
optString (45)
    on left: 36 37, on right: 22 23
nameList (46)
    on left: 38, on right: 32 34
nameListParts (47)
    on left: 39 40, on right: 38 39
optionalString (48)
    on left: 41 42, on right: 45 46
oligomerPartList (49)
    on left: 43 44, on right: 17 44
oligomerPart (50)
    on left: 45 46, on right: 43 44


state 0

    0 $accept: . input $end

    ScDatabase          shift, and go to state 1
    ScSave              shift, and go to state 2
    ScMonomerPack       shift, and go to state 3
    ScOligomer          shift, and go to state 4
    ScArchitect         shift, and go to state 5
    ScGeometryScorer    shift, and go to state 6
    ScExhaustiveSearch  shift, and go to state 7

    $default  reduce using rule 2 (input)

    input                go to state 8
    program              go to state 9
    statement            go to state 10
    command              go to state 11
    function             go to state 12
    databaseCmd          go to state 13
    saveCmd              go to state 14
    monomerPackFn        go to state 15
    oligomerFn           go to state 16
    architectFn          go to state 17
    geometryScorerFn     go to state 18
    exhaustiveSearchCmd  go to state 19


state 1

   14 databaseCmd: ScDatabase . ScString

    ScString  shift, and go to state 20


state 2

   15 saveCmd: ScSave . ScName ScString

    ScName  shift, and go to state 21


state 3

   16 monomerPackFn: ScMonomerPack . ScName optionalNameList ScOpenBrace monomerPackPartList ScCloseBrace

    ScName  shift, and go to state 22


state 4

   17 oligomerFn: ScOligomer . ScName ScOpenBrace oligomerPartList ScCloseBrace

    ScName  shift, and go to state 23


state 5

   18 architectFn: ScArchitect . ScName ScOpenBrace architectPartList ScCloseBrace

    ScName  shift, and go to state 24


state 6

   19 geometryScorerFn: ScGeometryScorer . ScName ScOpenBrace geometryScorerPartList ScCloseBrace

    ScName  shift, and go to state 25


state 7

   29 exhaustiveSearchCmd: ScExhaustiveSearch . ScName ScName ScString ScInteger

    ScName  shift, and go to state 26


state 8

    0 $accept: input . $end

    $end  shift, and go to state 27


state 9

    1 input: program .

    $default  reduce using rule 1 (input)


state 10

    3 program: statement .
    4        | statement . program

    ScDatabase          shift, and go to state 1
    ScSave              shift, and go to state 2
    ScMonomerPack       shift, and go to state 3
    ScOligomer          shift, and go to state 4
    ScArchitect         shift, and go to state 5
    ScGeometryScorer    shift, and go to state 6
    ScExhaustiveSearch  shift, and go to state 7

    $default  reduce using rule 3 (program)

    program              go to state 28
    statement            go to state 10
    command              go to state 11
    function             go to state 12
    databaseCmd          go to state 13
    saveCmd              go to state 14
    monomerPackFn        go to state 15
    oligomerFn           go to state 16
    architectFn          go to state 17
    geometryScorerFn     go to state 18
    exhaustiveSearchCmd  go to state 19


state 11

    5 statement: command . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 29


state 12

    9 command: function .

    $default  reduce using rule 9 (command)


state 13

    6 command: databaseCmd .

    $default  reduce using rule 6 (command)


state 14

    7 command: saveCmd .

    $default  reduce using rule 7 (command)


state 15

   10 function: monomerPackFn .

    $default  reduce using rule 10 (function)


state 16

   11 function: oligomerFn .

    $default  reduce using rule 11 (function)


state 17

   12 function: architectFn .

    $default  reduce using rule 12 (function)


state 18

   13 function: geometryScorerFn .

    $default  reduce using rule 13 (function)


state 19

    8 command: exhaustiveSearchCmd .

    $default  reduce using rule 8 (command)


state 20

   14 databaseCmd: ScDatabase ScString .

    $default  reduce using rule 14 (databaseCmd)


state 21

   15 saveCmd: ScSave ScName . ScString

    ScString  shift, and go to state 30


state 22

   16 monomerPackFn: ScMonomerPack ScName . optionalNameList ScOpenBrace monomerPackPartList ScCloseBrace

    ScOpenBracket  shift, and go to state 31

    $default  reduce using rule 35 (optionalNameList)

    optionalNameList  go to state 32
    nameList          go to state 33


state 23

   17 oligomerFn: ScOligomer ScName . ScOpenBrace oligomerPartList ScCloseBrace

    ScOpenBrace  shift, and go to state 34


state 24

   18 architectFn: ScArchitect ScName . ScOpenBrace architectPartList ScCloseBrace

    ScOpenBrace  shift, and go to state 35


state 25

   19 geometryScorerFn: ScGeometryScorer ScName . ScOpenBrace geometryScorerPartList ScCloseBrace

    ScOpenBrace  shift, and go to state 36


state 26

   29 exhaustiveSearchCmd: ScExhaustiveSearch ScName . ScName ScString ScInteger

    ScName  shift, and go to state 37


state 27

    0 $accept: input $end .

    $default  accept


state 28

    4 program: statement program .

    $default  reduce using rule 4 (program)


state 29

    5 statement: command ScEndOfStatement .

    $default  reduce using rule 5 (statement)


state 30

   15 saveCmd: ScSave ScName ScString .

    $default  reduce using rule 15 (saveCmd)


state 31

   38 nameList: ScOpenBracket . nameListParts ScCloseBracket

    ScName  shift, and go to state 38

    nameListParts  go to state 39


state 32

   16 monomerPackFn: ScMonomerPack ScName optionalNameList . ScOpenBrace monomerPackPartList ScCloseBrace

    ScOpenBrace  shift, and go to state 40


state 33

   34 optionalNameList: nameList .

    $default  reduce using rule 34 (optionalNameList)


state 34

   17 oligomerFn: ScOligomer ScName ScOpenBrace . oligomerPartList ScCloseBrace

    ScLink     shift, and go to state 41
    ScMonomer  shift, and go to state 42

    oligomerPartList  go to state 43
    oligomerPart      go to state 44


state 35

   18 architectFn: ScArchitect ScName ScOpenBrace . architectPartList ScCloseBrace

    ScOligomer  shift, and go to state 45

    oligomerFn         go to state 46
    oligomerReference  go to state 47
    architectPart      go to state 48
    architectPartList  go to state 49


state 36

   19 geometryScorerFn: ScGeometryScorer ScName ScOpenBrace . geometryScorerPartList ScCloseBrace

    ScDistance  shift, and go to state 50

    geometryScorerPartList  go to state 51
    geometryScorerPart      go to state 52


state 37

   29 exhaustiveSearchCmd: ScExhaustiveSearch ScName ScName . ScString ScInteger

    ScString  shift, and go to state 53


state 38

   39 nameListParts: ScName . nameListParts
   40              | ScName .

    ScName  shift, and go to state 38

    $default  reduce using rule 40 (nameListParts)

    nameListParts  go to state 54


state 39

   38 nameList: ScOpenBracket nameListParts . ScCloseBracket

    ScCloseBracket  shift, and go to state 55


state 40

   16 monomerPackFn: ScMonomerPack ScName optionalNameList ScOpenBrace . monomerPackPartList ScCloseBrace

    ScName  shift, and go to state 56

    monomerPackPartList  go to state 57
    monomerPackPart      go to state 58


state 41

   46 oligomerPart: ScLink . ScName ScName ScOpenBrace ScMonomer ScName ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement

    ScName  shift, and go to state 59


state 42

   45 oligomerPart: ScMonomer . ScName ScName optionalNameList optionalString ScEndOfStatement

    ScName  shift, and go to state 60


state 43

   17 oligomerFn: ScOligomer ScName ScOpenBrace oligomerPartList . ScCloseBrace

    ScCloseBrace  shift, and go to state 61


state 44

   43 oligomerPartList: oligomerPart .
   44                 | oligomerPart . oligomerPartList

    ScLink     shift, and go to state 41
    ScMonomer  shift, and go to state 42

    $default  reduce using rule 43 (oligomerPartList)

    oligomerPartList  go to state 62
    oligomerPart      go to state 44


state 45

   17 oligomerFn: ScOligomer . ScName ScOpenBrace oligomerPartList ScCloseBrace
   24 oligomerReference: ScOligomer . ScName

    ScName  shift, and go to state 63


state 46

   26 architectPart: oligomerFn . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 64


state 47

   25 architectPart: oligomerReference . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 65


state 48

   27 architectPartList: architectPart .
   28                  | architectPart . architectPartList

    ScOligomer  shift, and go to state 45

    $default  reduce using rule 27 (architectPartList)

    oligomerFn         go to state 46
    oligomerReference  go to state 47
    architectPart      go to state 48
    architectPartList  go to state 66


state 49

   18 architectFn: ScArchitect ScName ScOpenBrace architectPartList . ScCloseBrace

    ScCloseBrace  shift, and go to state 67


state 50

   22 geometryScorerPart: ScDistance . ScAlias ScAlias ScDouble ScDouble optString ScEndOfStatement
   23                   | ScDistance . ScAlias ScAlias ScDouble optString ScEndOfStatement

    ScAlias  shift, and go to state 68


state 51

   19 geometryScorerFn: ScGeometryScorer ScName ScOpenBrace geometryScorerPartList . ScCloseBrace

    ScCloseBrace  shift, and go to state 69


state 52

   20 geometryScorerPartList: geometryScorerPart .
   21                       | geometryScorerPart . geometryScorerPartList

    ScDistance  shift, and go to state 50

    $default  reduce using rule 20 (geometryScorerPartList)

    geometryScorerPartList  go to state 70
    geometryScorerPart      go to state 52


state 53

   29 exhaustiveSearchCmd: ScExhaustiveSearch ScName ScName ScString . ScInteger

    ScInteger  shift, and go to state 71


state 54

   39 nameListParts: ScName nameListParts .

    $default  reduce using rule 39 (nameListParts)


state 55

   38 nameList: ScOpenBracket nameListParts ScCloseBracket .

    $default  reduce using rule 38 (nameList)


state 56

   32 monomerPackPart: ScName . nameList ScEndOfStatement
   33                | ScName . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 72
    ScOpenBracket     shift, and go to state 31

    nameList  go to state 73


state 57

   16 monomerPackFn: ScMonomerPack ScName optionalNameList ScOpenBrace monomerPackPartList . ScCloseBrace

    ScCloseBrace  shift, and go to state 74


state 58

   30 monomerPackPartList: monomerPackPart .
   31                    | monomerPackPart . monomerPackPartList

    ScName  shift, and go to state 56

    $default  reduce using rule 30 (monomerPackPartList)

    monomerPackPartList  go to state 75
    monomerPackPart      go to state 58


state 59

   46 oligomerPart: ScLink ScName . ScName ScOpenBrace ScMonomer ScName ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement

    ScName  shift, and go to state 76


state 60

   45 oligomerPart: ScMonomer ScName . ScName optionalNameList optionalString ScEndOfStatement

    ScName  shift, and go to state 77


state 61

   17 oligomerFn: ScOligomer ScName ScOpenBrace oligomerPartList ScCloseBrace .

    $default  reduce using rule 17 (oligomerFn)


state 62

   44 oligomerPartList: oligomerPart oligomerPartList .

    $default  reduce using rule 44 (oligomerPartList)


state 63

   17 oligomerFn: ScOligomer ScName . ScOpenBrace oligomerPartList ScCloseBrace
   24 oligomerReference: ScOligomer ScName .

    ScOpenBrace  shift, and go to state 34

    $default  reduce using rule 24 (oligomerReference)


state 64

   26 architectPart: oligomerFn ScEndOfStatement .

    $default  reduce using rule 26 (architectPart)


state 65

   25 architectPart: oligomerReference ScEndOfStatement .

    $default  reduce using rule 25 (architectPart)


state 66

   28 architectPartList: architectPart architectPartList .

    $default  reduce using rule 28 (architectPartList)


state 67

   18 architectFn: ScArchitect ScName ScOpenBrace architectPartList ScCloseBrace .

    $default  reduce using rule 18 (architectFn)


state 68

   22 geometryScorerPart: ScDistance ScAlias . ScAlias ScDouble ScDouble optString ScEndOfStatement
   23                   | ScDistance ScAlias . ScAlias ScDouble optString ScEndOfStatement

    ScAlias  shift, and go to state 78


state 69

   19 geometryScorerFn: ScGeometryScorer ScName ScOpenBrace geometryScorerPartList ScCloseBrace .

    $default  reduce using rule 19 (geometryScorerFn)


state 70

   21 geometryScorerPartList: geometryScorerPart geometryScorerPartList .

    $default  reduce using rule 21 (geometryScorerPartList)


state 71

   29 exhaustiveSearchCmd: ScExhaustiveSearch ScName ScName ScString ScInteger .

    $default  reduce using rule 29 (exhaustiveSearchCmd)


state 72

   33 monomerPackPart: ScName ScEndOfStatement .

    $default  reduce using rule 33 (monomerPackPart)


state 73

   32 monomerPackPart: ScName nameList . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 79


state 74

   16 monomerPackFn: ScMonomerPack ScName optionalNameList ScOpenBrace monomerPackPartList ScCloseBrace .

    $default  reduce using rule 16 (monomerPackFn)


state 75

   31 monomerPackPartList: monomerPackPart monomerPackPartList .

    $default  reduce using rule 31 (monomerPackPartList)


state 76

   46 oligomerPart: ScLink ScName ScName . ScOpenBrace ScMonomer ScName ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement

    ScOpenBrace  shift, and go to state 80


state 77

   45 oligomerPart: ScMonomer ScName ScName . optionalNameList optionalString ScEndOfStatement

    ScOpenBracket  shift, and go to state 31

    $default  reduce using rule 35 (optionalNameList)

    optionalNameList  go to state 81
    nameList          go to state 33


state 78

   22 geometryScorerPart: ScDistance ScAlias ScAlias . ScDouble ScDouble optString ScEndOfStatement
   23                   | ScDistance ScAlias ScAlias . ScDouble optString ScEndOfStatement

    ScDouble  shift, and go to state 82


state 79

   32 monomerPackPart: ScName nameList ScEndOfStatement .

    $default  reduce using rule 32 (monomerPackPart)


state 80

   46 oligomerPart: ScLink ScName ScName ScOpenBrace . ScMonomer ScName ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement

    ScMonomer  shift, and go to state 83


state 81

   45 oligomerPart: ScMonomer ScName ScName optionalNameList . optionalString ScEndOfStatement

    ScString  shift, and go to state 84

    $default  reduce using rule 42 (optionalString)

    optionalString  go to state 85


state 82

   22 geometryScorerPart: ScDistance ScAlias ScAlias ScDouble . ScDouble optString ScEndOfStatement
   23                   | ScDistance ScAlias ScAlias ScDouble . optString ScEndOfStatement

    ScDouble  shift, and go to state 86
    ScString  shift, and go to state 87

    $default  reduce using rule 37 (optString)

    optString  go to state 88


state 83

   46 oligomerPart: ScLink ScName ScName ScOpenBrace ScMonomer . ScName ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement

    ScName  shift, and go to state 89


state 84

   41 optionalString: ScString .

    $default  reduce using rule 41 (optionalString)


state 85

   45 oligomerPart: ScMonomer ScName ScName optionalNameList optionalString . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 90


state 86

   22 geometryScorerPart: ScDistance ScAlias ScAlias ScDouble ScDouble . optString ScEndOfStatement

    ScString  shift, and go to state 87

    $default  reduce using rule 37 (optString)

    optString  go to state 91


state 87

   36 optString: ScString .

    $default  reduce using rule 36 (optString)


state 88

   23 geometryScorerPart: ScDistance ScAlias ScAlias ScDouble optString . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 92


state 89

   46 oligomerPart: ScLink ScName ScName ScOpenBrace ScMonomer ScName . ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement

    ScName  shift, and go to state 93


state 90

   45 oligomerPart: ScMonomer ScName ScName optionalNameList optionalString ScEndOfStatement .

    $default  reduce using rule 45 (oligomerPart)


state 91

   22 geometryScorerPart: ScDistance ScAlias ScAlias ScDouble ScDouble optString . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 94


state 92

   23 geometryScorerPart: ScDistance ScAlias ScAlias ScDouble optString ScEndOfStatement .

    $default  reduce using rule 23 (geometryScorerPart)


state 93

   46 oligomerPart: ScLink ScName ScName ScOpenBrace ScMonomer ScName ScName . optionalNameList optionalString ScCloseBrace ScEndOfStatement

    ScOpenBracket  shift, and go to state 31

    $default  reduce using rule 35 (optionalNameList)

    optionalNameList  go to state 95
    nameList          go to state 33


state 94

   22 geometryScorerPart: ScDistance ScAlias ScAlias ScDouble ScDouble optString ScEndOfStatement .

    $default  reduce using rule 22 (geometryScorerPart)


state 95

   46 oligomerPart: ScLink ScName ScName ScOpenBrace ScMonomer ScName ScName optionalNameList . optionalString ScCloseBrace ScEndOfStatement

    ScString  shift, and go to state 84

    $default  reduce using rule 42 (optionalString)

    optionalString  go to state 96


state 96

   46 oligomerPart: ScLink ScName ScName ScOpenBrace ScMonomer ScName ScName optionalNameList optionalString . ScCloseBrace ScEndOfStatement

    ScCloseBrace  shift, and go to state 97


state 97

   46 oligomerPart: ScLink ScName ScName ScOpenBrace ScMonomer ScName ScName optionalNameList optionalString ScCloseBrace . ScEndOfStatement

    ScEndOfStatement  shift, and go to state 98


state 98

   46 oligomerPart: ScLink ScName ScName ScOpenBrace ScMonomer ScName ScName optionalNameList optionalString ScCloseBrace ScEndOfStatement .

    $default  reduce using rule 46 (oligomerPart)
